--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,6 +1,7 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
+  background-color: rgb(32, 32, 32);
   overflow-x: hidden;
 }
 *::selection {
@@ -20,6 +21,7 @@ html {
   flex-flow: row nowrap;
   justify-content: space-around;
   align-items: center;
+  font-weight: 600;
   height: 100%;
   width: 90vw;
 }
@@ -32,7 +34,8 @@ html {
   position: absolute;
   top: 66px;
   margin-left: 5px;
-  background-color: white;
+  background: rgb(255,60,60);
+  background: linear-gradient(90deg, rgb(255, 93, 93) 0%, rgb(255, 245, 102) 25%, rgb(124, 218, 218) 50%, rgb(191, 126, 255) 75%, rgba(255,177,227,1) 100%);
 }
 .navBar-items p {
   font-size: 22px;
@@ -43,9 +46,11 @@ html {
   content: '';
   width: 13px;
   height: 4px;
-  background-color: #00c8ff;
+  background: rgb(255,60,60);
+  background: linear-gradient(90deg, rgb(255, 93, 93) 0%, rgb(255, 245, 102) 25%, rgb(124, 218, 218) 50%, rgb(191, 126, 255) 75%, rgba(255,177,227,1) 100%);
   position: absolute;
   top: 33px;
+  border-radius: 1px;
 }
 .aside {
   height: 100vh;
@@ -54,13 +59,15 @@ html {
   border: 1px solid #00c8ffa2;
   border-top: none;
   border-bottom: none;
+  border-right: none;
   color: white;
   display: flex;
   flex-flow: column;
   justify-content: flex-start;
   gap: 370px;
-  position: sticky;
-  top: -1px;
+  position: fixed;
+  top: 0;
+  left: 96.5%;
 }
 .aside > div {
   margin: 0px auto;
@@ -89,7 +96,85 @@ html {
 .aside > div:nth-child(2):hover{
   color: rgba(255, 255, 255, 0.555);
 }
-
+.about-container {
+  width: 100vw;
+  height: 650px;
+  overflow: hidden;
+  background-color: rgb(32, 32, 32);
+  margin-top: 80px;
+}
+.about {
+  background-image: url(../img/home.png);
+  background-repeat: no-repeat;
+  background-position: 50% -40%;
+  background-size: 90%;
+  color: white;
+  width: 95vw;
+  height: 900px;
+  margin: 0 auto;
+}
+.about div {
+  position: relative;
+  top: 190px;
+  left: 10%;
+  display: flex;
+  flex-flow: column wrap;
+  gap: 30px;
+}
+.about p {
+  font-weight: 600;
+  font-size: 20px;
+}
+.about div h1 {
+  text-decoration: underline;
+  width: 700px;
+  font-size: 80px;
+}
+.about div h2 {
+  font-weight: 400;
+  width: 40vw;
+}
+.section-paragraphs {
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  color: rgb(247, 247, 247);
+  font-size: 20px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+.section-paragraphs > div {
+  width: 32vw;
+  height: 550px;
+  margin: 4vw;
+  position: relative;
+  right: 100px;
+}
+.section-paragraphs > div > h2 {
+  font-size: 3vw;
+}
+.section-paragraphs > div > h3 {
+  font-size: 1.5vw;
+  font-family: 'Merriweather', serif;
+  font-weight: 300;
+  margin: 20px 0;
+}
+.section-paragraphs > div > p {
+  line-height: 30px;
+  font-size: 1.05vw;
+}
 @media screen and (max-width: 1000px) {
   
+}
+
+body::-webkit-scrollbar {
+  width: 4px;               /* width of the entire scrollbar */
+}
+body::-webkit-scrollbar-track {
+  background: rgb(172, 172, 172);        /* color of the tracking area */
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(0, 195, 255);    /* color of the scroll thumb */
 }
