--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -5,7 +5,13 @@ html {
   overflow-x: hidden;
 }
 *::selection {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   background-color: #00c8ff;
+}
+h2, h3, h4, h5, h6, p {
+  color: rgb(238, 238, 238);
 }
 .navBar {
   color: rgb(255, 255, 255);
@@ -15,6 +21,10 @@ html {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  border-bottom: 1px solid rgb(41, 41, 41);
 }
 .navBar-items {
   display: flex;
@@ -54,9 +64,11 @@ html {
 }
 .aside {
   height: 100vh;
-  width: 65px;
+  width: 70px;
   background-color: rgb(32, 32, 32);
-  border: 1px solid #00c8ffa2;
+  border: 2px solid;
+  border-image-source: linear-gradient(180deg, rgb(255, 93, 93) 0%, rgb(255, 245, 102) 25%, rgb(124, 218, 218) 50%, rgb(191, 126, 255) 75%, rgba(255,177,227,1) 100%);
+  border-image-slice: 4;
   border-top: none;
   border-bottom: none;
   border-right: none;
@@ -65,9 +77,8 @@ html {
   flex-flow: column;
   justify-content: flex-start;
   gap: 370px;
-  position: fixed;
-  top: 0;
-  left: 96.5%;
+  position: sticky;
+  left: 96.5vw;
 }
 .aside > div {
   margin: 0px auto;
@@ -83,7 +94,9 @@ html {
   gap: 20px;
 }
 .aside > div:first-child {
-  border-bottom: 1px solid #00c8ff9c;
+  border-bottom: 2px solid;
+  border-image-source: linear-gradient(90deg, rgb(255, 190, 93) 0%, rgb(255, 245, 102) 25%, rgb(124, 218, 218) 50%, rgb(191, 126, 255) 75%, rgba(255,177,227,1) 100%);
+  border-image-slice: 4;
 }
 .aside > div:nth-child(2) {
   transform: rotate(-90deg);
@@ -140,7 +153,7 @@ html {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  color: rgb(247, 247, 247);
+  color: rgb(238, 238, 238);
   font-size: 20px;
   margin: 0 auto;
   margin-top: 100px;
@@ -153,18 +166,366 @@ html {
   right: 100px;
 }
 .section-paragraphs > div > h2 {
-  font-size: 3vw;
+  font-size: 50px;
 }
 .section-paragraphs > div > h3 {
-  font-size: 1.5vw;
+  font-size: 26px;
   font-family: 'Merriweather', serif;
   font-weight: 300;
   margin: 20px 0;
 }
 .section-paragraphs > div > p {
   line-height: 30px;
-  font-size: 1.05vw;
+  font-size: 20px;
 }
+.section-img-cards {
+  width: 85vw;
+  height: auto;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 600px;
+}
+.section-img-cards div {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  width: 100%;
+  flex: 1 1 500px;
+}
+.section-img-cards div div {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  color: rgb(238, 238, 238);
+  width: 40vw;
+  margin-bottom: 70px;
+}
+.section-img-cards div div img {
+  width: 40vw;
+}
+.section-img-cards div div h2 {
+  font-size: 50px;
+  margin-top: 40px;
+}
+.section-img-cards div div h3 {
+  font-family: 'Merriweather', serif;
+  font-weight: 300;
+  font-size: 26px;
+  margin: 20px 0;
+}
+.section-img-cards div div p {
+  font-size: 20px;
+  margin-top: 20px;
+  line-height: 30px;
+  width: 83%;
+  margin-top: 0;
+}
+.title-section {
+  width: 85vw;
+  margin: 0 auto;
+}
+.title-section::before {
+  content: '';
+  display: block;
+    margin-top: 0.3125rem;
+    height: 2px;
+    width: 2vw;
+    position: relative;
+    top: 9px;
+    background-color: #00c8ff;
+}
+.title-section h3 {
+  font-size: 0.6875rem;
+  margin-left: 50px;
+}
+.title-section h2 {
+  font-size: 60px;
+  margin: 50px;
+  margin-bottom: 100px;
+  margin-top: 20px;
+}
+.section-cards {
+  width: 100vw;
+  background-color: rgb(66, 66, 66);
+  padding: 80px 0;
+}
+.card-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  width: 85vw;
+  margin: 0 auto;
+}
+.card {
+  width: 40vw;
+  height: 220px;
+  margin: 10px;
+  background-color: black;
+  display: flex;
+  flex-flow: row nowrap;
+}
+.card div {
+  cursor: pointer;
+  background-color: rgb(32, 32, 32);
+  margin: 0;
+  padding: 20px;
+  width: 50%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+}
+.card div h2 {
+  font-size: 1.75rem;
+  margin: 20px 0px;
+}
+.card div h2::before {
+  content: '';
+  display: block;
+  background-color: rgb(238, 238, 238);
+  width: 13px;
+  height: 3px;
+  position: relative;
+  left: 2px;
+  top: -10px;
+}
+.card div p::after {
+  content: '→';
+  margin-left: 10px;
+}
+.card > img {
+  width: 50%;
+  height: 220px;
+  transition: 0.5s;
+  object-fit: cover;
+}
+.card img:hover {
+  opacity: 0.6;
+}
+.prefooter-section {
+  width: 100vw;
+  padding: 100px 0;
+}
+.prefooter-section h4 {
+  font-size: 2.5rem;
+  margin: 0 auto;
+  width: 83vw;
+  margin-bottom: 20px;
+}
+.prefooter-section > div:nth-last-child(1) {
+  width: 85vw;
+  height: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content:flex-start;
+}
+.prefooter-card {
+  margin-left: 20px;
+  width: calc(25% - 20px);
+  height: 450px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  overflow: hidden;
+  flex: 1 1 500px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.prefooter-card:hover {
+  flex: 1 1 580px
+}
+.prefooter-card div {
+  overflow: hidden;
+}
+.prefooter-card > div > img {
+  transition: 0.5s;
+  width: 100%;
+}
+.prefooter-card > div > img:hover {
+  transform: scale(1.02, 1.02);
+  opacity: 0.5;
+}
+.prefooter-card > div:nth-last-child(1){
+  min-height: 115px;
+  width: 100%;
+  background-color: rgb(66, 66, 66);
+}
+.prefooter-card div h5 {
+  font-size: 20px;
+  padding: 20px;
+}
+.prefooter {
+  background-color: rgb(22, 22, 22);
+}
+.footer-first {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  width: 85vw;
+  height: 950px;
+  margin: 0 auto;
+}
+.footer-first-item {
+  width: 50%;
+  padding: 40px 0;
+}
+.footer-first-item h2{
+  font-size: 4vw;
+}
+.footer-first-item > p{
+  font-size: .85rem;
+  font-weight: 700;
+  color: #00c8ff;
+  padding-top: 20px;
+}
+.footer-first-item input, select, textarea {
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid rgb(116, 116, 116);
+  font-weight: 700;
+  font-size: 13px;
+  color: rgb(116, 116, 116);
+}
+.footer-first-item form {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+}
+.footer-first-item form div {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  padding: 20px 0;
+  gap: 30px;
+}
+.footer-first-item input, select {
+  width: 100%;
+  height: 35px;
+  outline: none;
+}
+.footer-first-item > form > select {
+  margin: 15px 0;
+}
+.footer-first-item div:nth-last-child(4) {
+  width: 100%;
+  flex-flow: column nowrap;
+}
+.footer-first-item div:nth-last-child(4) h3 {
+  color: rgb(238, 238, 238);
+}
+.footer-first-item div:nth-last-child(4) textarea {
+  resize: none;
+  border: 2px solid rgb(116, 116, 116);
+  height: 200px;
+}
+.footer-first-item div:nth-last-child(2) p{
+  margin: auto 0;
+  width: 80%;
+}
+.footer-first-item div:nth-last-child(3) p{
+  margin: auto 0;
+}
+.footer-first-item div:nth-last-child(2) {
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+}
+input[type="checkbox"] {
+  margin: auto 0;
+  appearance: none;
+  width: 18px;
+  height: 18px;
+  border: 1.5px solid rgb(243, 243, 243);
+  border-radius: 2px;
+  background-color: transparent;
+}
+input[type="checkbox"]:checked::after {
+  content: '✓';
+  color: white;
+  position: relative;
+  top: -2px;
+  left: 2px;
+}
+input[type="submit"] {
+  cursor: pointer;
+  margin: 0 auto;
+  margin-top: 40px;
+  width: 150px;
+  height: 45px;
+  border: 2px solid white;
+  color: white;
+  font-weight: 700;
+  box-shadow: inset 0 0 0 0 white;
+  transition: ease-out 0.5s;
+  outline: none;
+}
+input[type="submit"]:hover {
+  box-shadow: inset 150px 0 0 0 white;
+  color: rgb(32, 32, 32);
+}
+.footer {
+  width: 100vw;
+  background-color: rgb(5, 5, 5);
+}
+.footer-second {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  width: 85vw;
+  margin: 0 auto;
+  height: 265px;
+}
+.footer-second div {
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-second > div:nth-child(1) {
+  border-bottom: 2px solid white;
+}
+.footer-second a {
+  width: 25px;
+}
+.footer-second img {
+  width: 23px;
+}
+.footer-second p {
+  cursor: pointer;
+}
+.footer-links {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+  gap: 75px;
+  font-weight: 600;
+  height: min-content;
+}
+.social-media {
+  gap: 28px;
+  justify-content: space-around;
+}
+.footer-logo::after {
+  content: '';
+  width: 15px;
+  height: 4px;
+  display: block;
+  border: none;
+  border-radius: 1px;
+  position: relative;
+  top: -9px;
+  left: 145px;
+  background: rgb(255,60,60);
+  background: linear-gradient(90deg, rgb(255, 190, 93) 0%, rgb(255, 245, 102) 25%, rgb(124, 218, 218) 50%, rgb(191, 126, 255) 75%, rgba(255,177,227,1) 100%);
+}
+
+
+
+
+
 @media screen and (max-width: 1000px) {
   
 }
